Fri Apr 29 23:45:59 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* examples/Bounded_Packet_Relay/BPR_Drivers.cpp:
	* examples/Bounded_Packet_Relay/BPR_Drivers.h:
	* examples/Mem_Map/IO-tests/IO_Test.cpp:
	* examples/Mem_Map/IO-tests/IO_Test.h:
	* examples/Reactor/Misc/test_event_handler_t.cpp:
	* examples/Threads/future2.cpp:
	* examples/Timer_Queue/Driver.cpp:
	* examples/Timer_Queue/Driver.h:

	  Added virtual destructor to silence g++ 4.0 warnings.

	* examples/Threads/future2.cpp (test_timeout):

	  Fixed "variable may be used initialized" warning.

Fri Apr 29 09:25:28 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* ace/Thread_Exit.cpp (cleanup): Set ACE_Thread_Manager::thr_exit_
	  to 0 to prevent a later crash in
 	  ACE_Thread_Manager::set_thr_exit().  Thanks to D. J. Stachniak
 	  <djstachniak@yahoo.com> for submitting a fix and Slava Gorelik
 	  <slava.gorelik@sap.com> for reporting the problem.

Fri Apr 29 12:42:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Added some info about Visual Age versions that cause problems

Fri Apr 29 08:55:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          On IA64 add -mp to the compiler flags to disable the optimizer
          because of problems in the TAO IDL_Test

Thu Apr 28 23:06:59 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/config-linux-common.h:

	  Do not perform feature tests using implementation-specific
	  preprocessor symbols.  Use the standard ones instead
	  (e.g. _POSIX_C_SOURCE, _ISO_C99SOURCE, _BSD_SOURCE,
	  _XOPEN_SOURCE, etc).

Thu Apr 28 22:53:16 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/config-linux-common.h (ACE_LACKS_MKSTEMP_PROTOTYPE):

	  Do not define this preprocessor symbol if _XOPEN_SOURCE_EXTENDED
	  is already defined.  Addresses mkstemp() unmatched prototype
	  related errors exhibited by g++ 4.0 on some Linux platforms.
